force-app/main/default/objects/HouseCanaryForReporting__c/HouseCanaryForReporting__c.object-meta.xml
<CustomObject>
    <description>Use this object for HouseCanary Reporting</description>
    <label>HouseCanaryForReporting</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>HouseCanaryForReporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HouseCanaryForReporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>