force-app/main/default/objects/HouseCanaryForReporting__c/fields/Property_AVM__c.field-meta.xml
<CustomField>
    <fullName>Property_AVM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property AVM</label>
    <referenceTo>Property_AVM__c</referenceTo>
    <relationshipLabel>HouseCanaryForReporting</relationshipLabel>
    <relationshipName>HouseCanaryForReporting</relationshipName>
    <type>Lookup</type>
</CustomField>