force-app/main/default/objects/HouseCanaryForReporting__c/fields/Property_Mortgage_lien_all__c.field-meta.xml
<CustomField>
    <fullName>Property_Mortgage_lien_all__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Mortgage lien all</label>
    <referenceTo>Property_Mortgage_lien_all__c</referenceTo>
    <relationshipLabel>HouseCanaryForReporting</relationshipLabel>
    <relationshipName>HouseCanaryForReporting</relationshipName>
    <type>Lookup</type>
</CustomField>