force-app/main/default/objects/HouseCanaryForReporting__c/fields/RelatedProperty__c.field-meta.xml
<CustomField>
    <fullName>RelatedProperty__c</fullName>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>HouseCanaryForReporting</relationshipLabel>
    <relationshipName>HouseCanaryForReporting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>